1 - Floating notice text correctly spans on multiple lines on mobile 2 - Console shows spinner upon loading of new cards

--- a/static/ikwen/css/base.css
+++ b/static/ikwen/css/base.css
@@ -12,7 +12,7 @@ body {color: #464646;}
 .working {cursor: wait}
 .success {background: #B6F1B6; border: 1px solid; border-radius: 3px; color: #039B03}
 .msg-tag.info {background: #dde9f1;border: 1px solid;border-radius: 3px;color: #1d2e9b}
-.failure, .floating-notice.error, .msg-tag.error {background: #FFB6C1; border: 1px solid; border-radius: 3px; color:  #F00}
+.failure, .floating-notice.error, .msg-tag.error {background: #fffbfb;border: 1px solid;border-radius: 3px;color:  #F00;}
 .clear {clear: both}
 .text-muted {color: #888}
 .help {color: #888; font-size: 14px}
@@ -373,6 +373,8 @@ footer .company-name {color: #666; text-decoration: none}
         border-bottom: 3px solid #1565C0;
         color: #555;
     }
+    #top-notice-ctnr {top: 30px}
+    .floating-notice {display: block;margin: auto;max-width: 90%;}
     .bottom-shade-xs {box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .1)}
     .ik-li .date {position: absolute; right: 6px}
     .pulse {margin: 12px 0 0 10px}
